2001-07-27  Jonathan Larmour  <jlarmour@redhat.com>

	* include/sys/select.h: Renamed to....
	* include/sys/bsdselect.h: New file.
	* include/sys/socketvar.h: Include <sys/bsdselect.h> instead of
	<sys/select.h>
	* src/lib/select.c: Include <sys/bsdselect.h>

2001-07-26  Jonathan Larmour  <jlarmour@redhat.com>

	* cdl/net.cdl (CYGPKG_NET_API_LOCAL): Implements select()
	* include/sys/bsdtypes.h: No need for these select definitions.

2001-06-20  Grant Edwards <grante@visi.com>
2001-06-20  Hugo Tyson  <hmt@redhat.com>

	* src/lib/dhcp_prot.c (alarm_function): Change the lease state
	before re-enabling the alarm so that if it somehow gets times of
	zero (ie. right now) it quickly completes the state machine rather
	than recursing to its doom.
	(new_lease): Test the retcode of get_bootp_option() and use
	obvious defaults if the T1 and T2 times are not provided - this is
	RFC compliant! - and use "infinite lease" if the lease time is not
	provided at all.

2001-06-19  Trenton D. Adams  <tadams@extremeeng.com>

	* tests/server_test.c (server_test): Null terminate read string
	at right place.

2001-06-13  Jonathan Larmour  <jlarmour@redhat.com>

	* cdl/net.cdl: Make debug output an option. Include DHCP.

	* src/lib/dhcp_prot.c: DHCP_CHATTER -> CYGDBG_NET_DHCP_CHATTER

	* src/ecos/support.c (cyg_kmem_init): Only print debug output if
	requested.

	* cdl/net.cdl: Make requirements on other eCos features more
	abstract.

2001-05-09  Robin Farine <acnrf@dial.eunet.ch>
2001-05-09  Hugo Tyson  <hmt@redhat.com>

	* src/lib/dhcp_prot.c (do_dhcp): In DHCPSTATE_INIT case, create a
	new xid.  Servers apparantly can use *only* this to distinguish
	machines, even with different MAC addresses!  Therefore we use
	both the most sensitive randomizer available (arc4random()) which
	in reality uses a finegrain clock, and salt the value further with
	the MAC address itself.  Thanks again Robin.

	* src/ecos/support.c (arc4random): Make arc4random not always be a