@@ -172,6 +172,9 @@ echo_test(void * p)
     if (s_source < 0) {
         pexit("stream socket");
     }
+    if (setsockopt(s_source, SOL_SOCKET, SO_REUSEADDR, &one, sizeof(one))) {
+        pexit("setsockopt /source/ SO_REUSEADDR");
+    }
     memset(&local, 0, sizeof(local));
     local.sin_family = AF_INET;
 //    local.sin_len = sizeof(local);
@@ -179,9 +182,6 @@ echo_test(void * p)
     local.sin_addr.s_addr = INADDR_ANY;
     if(bind(s_source, (struct sockaddr *) &local, sizeof(local)) < 0) {
         pexit("bind /source/ error");
-    }
-    if (setsockopt(s_source, SOL_SOCKET, SO_REUSEADDR, &one, sizeof(one))) {
-        pexit("setsockopt /source/ SO_REUSEADDR");
     }
     listen(s_source, SOMAXCONN);
 
