@@ -388,6 +388,12 @@ echo_test(cyg_addrword_t p)
     if (s_source < 0) {
         pexit("stream socket");
     }
+    if (setsockopt(s_source, SOL_SOCKET, SO_REUSEADDR, &one, sizeof(one))) {
+        pexit("setsockopt /source/ SO_REUSEADDR");
+    }
+    if (setsockopt(s_source, SOL_SOCKET, SO_REUSEPORT, &one, sizeof(one))) {
+        pexit("setsockopt /source/ SO_REUSEPORT");
+    }
     memset(&local, 0, sizeof(local));
     local.sin_family = AF_INET;
     local.sin_len = sizeof(local);
@@ -395,12 +401,6 @@ echo_test(cyg_addrword_t p)
     local.sin_addr.s_addr = INADDR_ANY;
     if(bind(s_source, (struct sockaddr *) &local, sizeof(local)) < 0) {
         pexit("bind /source/ error");
-    }
-    if (setsockopt(s_source, SOL_SOCKET, SO_REUSEADDR, &one, sizeof(one))) {
-        pexit("setsockopt /source/ SO_REUSEADDR");
-    }
-    if (setsockopt(s_source, SOL_SOCKET, SO_REUSEPORT, &one, sizeof(one))) {
-        pexit("setsockopt /source/ SO_REUSEPORT");
     }
     listen(s_source, SOMAXCONN);
 
